--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -313,10 +313,14 @@ hr {
   margin-top:30px;
 }
 
+.trending_div {
+  line-height: 25px;
+}
+
 .trending_tags {
   font-family: 'Bree Serif', serif;
   font-size: 16px;
-  text-shadow: 1px 1px 2px #000000;
+  text-shadow: 2px 3px 2px #000000;
   color: #ffffff;
   padding-left: 5px;
 }
