--- a/app/views/posts/_new.html.erb
+++ b/app/views/posts/_new.html.erb
@@ -6,11 +6,9 @@
 <%= form_for :post, url: posts_path do |f| %>
 
 	<%= f.hidden_field :ip, :value => request.remote_ip.split('.').join().to_i %>
-  <p>
-    <%= f.text_area :text, :class => "post_box", :placeholder => "Share your thoughts here .  .   .    .     .    and #tag away!" %>
-  </p>
+	<div class="post_box_color">
+    <%= f.text_area :text, :class => "post_box", :placeholder => "Share your thoughts here, and #tag away!" %>
+	</div>
  
-  <p>
-    <%= f.submit 'Share Idea', :class => 'post_button btn btn-default' %>
-  </p>
+    <%= f.submit 'Post', :class => 'post_button btn btn-default' %>
 <% end %>
