added automatic tagging when in t community and styling including mobile to t communities

--- a/app/assets/stylesheets/atags.css.scss
+++ b/app/assets/stylesheets/atags.css.scss
@@ -32,7 +32,7 @@
 }
 
 .atag_title_link {
-	margin-left:22%;
+	margin-left:13%;
 	margin-top: 5px;
 	font-family: 'Bree Serif', serif;
 	float: left;
@@ -44,4 +44,8 @@
 .atag_title_link:hover {
 	color: #ffffff;
 	text-shadow: 1px 1px 2px #065655;
+}
+
+.atag_new_post {
+	// margin-top: 10px;
 }
