--- a/app/views/atags/show.html.erb
+++ b/app/views/atags/show.html.erb
@@ -1,79 +1,107 @@
 <div class="wrapper">
   <div class="box">
     <div class="column col-sm-12 col-xs-12" id="main">
-      <!-- top nav -->
-      <div class="navbar navbar-blue navbar-static-top">
+      <div class="row row-offcanvas row-offcanvas-left">
 
-          <div class="navbar-header col-sm-3">
-            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
-              <span class="sr-only">Toggle</span>
-              <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-            </button>
-            <div>
-              <%= link_to image_tag('think_space_logo.png', :class => "tslogo"), '/' %>
-            </div>
-              <%= link_to 'Think Space', '/', :class => "think_space" %>
+        <!-- Left Sidebar -->
+        <div class="column col-sm-3 col-xs-1 sidebar-offcanvas" id="sidebar">
+          <div class="nav nav_padding mobile_arrow_box">
+            <a href="#" data-toggle="offcanvas" class="visible-xs text-center">
+              <i class="fa fa-chevron-right fa-3x mobile_arrow"></i>
+            </a>
           </div>
 
-        <div class="col-sm-9">
-          <nav class="collapse navbar-collapse" role="navigation">
+          <ul class="nav hidden-xs" id="lg-menu">
+            <div class="atag_new_post">
+              <!-- New Post Form Partial  -->
+              <%= render "posts/new" %>
+            </div>
+          </ul>
 
-          	<%= link_to '#' + @atag.tag, @atag, :class => 'atag_title_link' %>
-          	
-            <%# Render Notifications Element %>
-            <%= render 'notifications/index' %>
-
-            <ul class="nav navbar-nav home_button navbar-right">
-            <li>
-              <a href="/"><i class="fa fa-home fa-lg"></i> Home</a>
-            </li>
-            </ul>
-
-          </nav>
         </div>
-      </div>
-      <!-- /top nav -->
+        <!-- Left Sidebar End -->
 
-      <div class='post_external'>
-        <%# For each spliced post made of pieces (text and hashtags) %>
-        <% @aposts_spliced_full.each do |post_pieces| %>
-          <div class="panel panel-default">
+        <!-- Right Main -->
+        <div class="column col-sm-9 col-xs-11">
 
-            <%# Add external link to post in top right corner %>
-            <div class="post_external_link">
-              <a href="<%= '/posts/' + post_pieces[-1].to_s + '/comments' %>">
-               <i class="fa fa-external-link"></i>
-              </a>
+          <!-- top nav -->
+          <div class="navbar navbar-blue navbar-static-top">
+
+              <div class="navbar-header col-sm-4">
+                <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
+                  <span class="sr-only">Toggle</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+                <div>
+                  <%= link_to image_tag('think_space_logo.png', :class => "tslogo"), '/' %>
+                </div>
+                  <%= link_to 'Think Space', '/', :class => "think_space" %>
+              </div>
+
+            <div class="col-sm-8">
+              <nav class="collapse navbar-collapse" role="navigation">
+
+                <%= link_to '#' + @atag.tag, @atag, :class => 'atag_title_link' %>
+                
+                <%# Render Notifications Element %>
+                <%= render 'notifications/index' %>
+
+                <ul class="nav navbar-nav home_button navbar-right">
+                <li>
+                  <a href="/"><i class="fa fa-home fa-lg"></i> Home</a>
+                </li>
+                </ul>
+
+              </nav>
             </div>
-
-            <div class="panel-body panel_body_text" style="word-wrap: break-word;">
-              
-             <div class="<%= 'post_color' + post_pieces[-2].to_s  %> post_color_tag">
-              <div class="post_color_tag"></div>
-             </div>
-
-             <%# Build post from pieces (text and hashtags), excluding last element which is post_id %>   
-             <% post_pieces[0..-3].each do |piece| %>
-              <%= piece %>
-             <% end %>
-
-               <%# Render Post Comments and Comment Box Asynchronously to Post's Stream on Click %>
-               <div id="<%= 'post' + post_pieces[-1].to_s %>"></div>
-            </div>
-
-            <%# Comments Ajax Link %>
-            <div class='comments_load_box panel-footer'>
-            <%= link_to content_tag(:span, @comments.where(post_id:post_pieces[-1]).length.to_s + ' Response(s)'), '/posts/' + post_pieces[-1].to_s, remote: true, :class => 'comments_load' %>
-            </div>
-
           </div>
-        <% end %>
-      </div>
+          <!-- /top nav -->
 
+          <!-- Posts -->
+          <div class='post_external'>
+            <%# For each spliced post made of pieces (text and hashtags) %>
+            <% @aposts_spliced_full.each do |post_pieces| %>
+              <div class="panel panel-default">
+
+                <%# Add external link to post in top right corner %>
+                <div class="post_external_link">
+                  <a href="<%= '/posts/' + post_pieces[-1].to_s + '/comments' %>">
+                   <i class="fa fa-external-link"></i>
+                  </a>
+                </div>
+
+                <div class="panel-body panel_body_text" style="word-wrap: break-word;">
+                  
+                 <div class="<%= 'post_color' + post_pieces[-2].to_s  %> post_color_tag">
+                  <div class="post_color_tag"></div>
+                 </div>
+
+                 <%# Build post from pieces (text and hashtags), excluding last element which is post_id %>   
+                 <% post_pieces[0..-3].each do |piece| %>
+                  <%= piece %>
+                 <% end %>
+
+                   <%# Render Post Comments and Comment Box Asynchronously to Post's Stream on Click %>
+                   <div id="<%= 'post' + post_pieces[-1].to_s %>"></div>
+                </div>
+
+                <%# Comments Ajax Link %>
+                <div class='comments_load_box panel-footer'>
+                <%= link_to content_tag(:span, @comments.where(post_id:post_pieces[-1]).length.to_s + ' Response(s)'), '/posts/' + post_pieces[-1].to_s, remote: true, :class => 'comments_load' %>
+                </div>
+
+              </div>
+            <% end %>
+          </div>
+          <!-- Posts End -->
+        </div>
+        <!-- Right Main End -->
+      
       <%= will_paginate @aposts %>
 
+      </div>
     </div>
   </div>
 </div>
