--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -49,6 +49,7 @@
   background-color: #2196C6;
   color: #ffffff;
   border-color: transparent;
+  z-index: 25;
 }
 
 .post_button:hover {
@@ -149,4 +150,12 @@
    font-size: 24px;
    line-height: 28px;
    text-align: center;  
+}
+
+
+// Mobile Formatting
+@media screen and (max-width: 768px) {
+.post_external {
+  margin-top: 0px;
+}
 }
