--- a/app/assets/stylesheets/atags.css.scss
+++ b/app/assets/stylesheets/atags.css.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .atag_title_main {
-	font-family: 'Bree Serif', serif;
+	font-family: 'Open Sans', sans-serif;
 	float: left;
 	font-size: 32px;
 	text-shadow: 1px 1px 2px #000000;
@@ -34,7 +34,7 @@
 .atag_title_link {
 	margin-left:13%;
 	margin-top: 5px;
-	font-family: 'Bree Serif', serif;
+	font-family: 'Open Sans', sans-serif;
 	float: left;
 	font-size: 24px;
 	text-shadow: 1px 1px 2px #000000;
