--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -5,7 +5,7 @@
 // Posts Formatting
 
 .post_hashtag {
-	font-family: 'Bree Serif', serif;
+	font-family: 'Open Sans', sans-serif;
 	color: #000000;
 }
 
@@ -35,7 +35,7 @@
 }
 
 .panel_body_text {
-  font-family: 'Bree Serif', serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .post_button {
@@ -43,7 +43,7 @@
 	margin-left: 5%;
 	padding-top: 5px;
 	padding-bottom: 5px;
-	font-family: 'Bree Serif', serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 18px;
 	border-radius: 0px;
   background-color: #2196C6;
@@ -63,7 +63,7 @@
 	text-align:center;
 	margin-left: 5%;
 	padding-bottom: 10px;
-    font-family: 'Bree Serif', serif;
+    font-family: 'Open Sans', sans-serif;
     text-shadow: 2px 2px 3px #000000;
 }
 */
