--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -186,7 +186,7 @@ hr {
   padding-right: 10px;
   padding-left: 10px;
   font-size: 24px; 
-  font-family: 'Bree Serif', serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .notify_active_mobile {
@@ -221,7 +221,7 @@ hr {
   padding-right: 10px;
   padding-left: 10px;
   font-size: 24px; 
-  font-family: 'Bree Serif', serif;
+  font-family: 'Open Sans', sans-serif;
   padding-left: 14px;
   padding-top: 8px;
 }
@@ -235,7 +235,7 @@ hr {
   width: 100%;
   line-height: 22px;
   padding-left: 10px;
-  font-family: 'Bree Serif', serif;
+  font-family: 'Open Sans', sans-serif;
   word-wrap:break-word;
   padding-bottom: 20px;
 }
@@ -248,7 +248,7 @@ hr {
   width: 100%;
   line-height: 28px;
   padding-left: 10px;
-  font-family: 'Bree Serif', serif;
+  font-family: 'Open Sans', sans-serif;
   word-wrap: break-word;
   padding-bottom: 20px;
 }
@@ -307,7 +307,7 @@ hr {
 
 .trending {
   text-align: center;
-  font-family: 'Bree Serif', serif;
+  font-family: 'Open Sans', sans-serif;
   margin-left: 25px;
   text-shadow: 1px 1px 2px #000000;
   margin-top:30px;
@@ -318,7 +318,7 @@ hr {
 }
 
 .trending_tags {
-  font-family: 'Bree Serif', serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   text-shadow: 2px 3px 2px #000000;
   color: #ffffff;
@@ -332,7 +332,7 @@ hr {
 
 .community_statement {
   margin-top:20px;
-  font-family: 'Bree Serif', serif;
+  font-family: 'Open Sans', sans-serif;
   text-align: center;
   text-shadow: 1px 1px 2px #000000;
 }
@@ -393,7 +393,7 @@ hr {
   bottom: 5px;
   padding: 5px;
   text-align:center;
-  font-family: 'Bree Serif', serif;
+  font-family: 'Open Sans', sans-serif;
   text-shadow: 1px 1px 2px #000000;
   margin-top: 10px;
 }
@@ -421,7 +421,7 @@ hr {
   padding-top: 10px;
   padding-bottom: 10px;
   margin-top: 5px; 
-  font-family: 'Bree Serif', serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 18px;
   float: right;
   background-color: #2196C6;
@@ -462,7 +462,7 @@ hr {
 }
 
 .comments_load {
-  font-family: 'Bree Serif', serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .comments_load:hover {
