added anti-bot-spam measure via hidden text field that if filled doesn't allow post

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -2,6 +2,13 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+// Anti Spam
+
+.turkey_catch {
+  visibility: hidden;
+  position: absolute;
+}
+
 // Posts Formatting
 
 .post_hashtag {
